Modificando index.html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <button type="button" id="enviar-button">Enviar</button>
     </form>
 
+    <script src="https://apis.google.com/js/api.js"></script>
     <script src="js/logica.js"></script>
 </body>
 </html>
