Modificando logica.js

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <button type="button" id="enviar-button">Enviar</button>
     </form>
 
-    <script src="https://apis.google.com/js/api.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/googleapis@130.2.0/dist/googleapis.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/logica.js"></script>
 </body>
 </html>
